--- a/style.css
+++ b/style.css
@@ -1,35 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;400;500;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300;400;500;800&display=swap');
 
 *{
-    margin: 0px;
+    margin: 0;
     padding: 0;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
-
 body {
-    font-family: 'Montserrat Alternates', sans-serif;
-    margin: 30px 30px 0 30px ;
+    margin-top: 20px;
 }
 header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-
+}
+.logo{
+    width: 10%;
+    display: flex;
 }
 .navMenuList {
     display: flex;
     flex-direction: row;
     list-style: none;
-    width: 40%;
+    width: 35%;
     justify-content: space-between;
 }
+.navMenuList li {
+    display: flex;
+    width: 33%;
+    justify-content: center;
+    text-align: center;
+}
 a {
-    font-size: 14spx;
+    font-size: 16px;
     transition: all 300ms ease;
     text-decoration: none;  
-    color:#A6A6A6 ;
-    font-weight: 500;
+    color:#606060 ;
+    font-weight: 400;
 }
 a:hover {
     color:#26547C ;
@@ -37,22 +45,55 @@ a:hover {
 }
 #homePage {
     color: #26547C;
-    font-size: larger;
+    font-size: 18px;
     font-weight:500;
     text-decoration: underline;
     text-decoration-thickness: 1.5px;
     text-underline-offset: 0.5rem;
 }
 .accountSignIn{
+    width: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    
+}
+.accountSignIn a {
     font-size: 12px;
 }
-
-#accountIcon{
-    width:30px;
-    height: 30px;
+#accountIcon {
+    width:20px;
+    height: 20px;
+}
+.searchSection {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+.searchContainer{
+    background: transparent;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 250px;
+    padding: 5px 5px 5px 20px;
+    border: 1px solid #606060;
+    border-radius: 40px;
+}
+#inputSearch {
+    border: none;
+    font-size: 18px;
+    font-weight: 200;
+    color: #26547C;
+    background: transparent;
+}
+#inputSearch:focus {
+    outline: none;
+    
+}
+#searchBtn {
+    width: 30px;
+    background: transparent;
+    border: none;
 }
